welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:16: error: not found: value x
		setPos(x,y)
                       ^ZigZag:18: error: not found: value x
		x=x+1
                ^ZigZag:29: error: not found: value x
		setPos(x,y)
                       ^ZigZag:30: error: not found: value c
		c=c+1
                ^ZigZag:31: error: not found: value x
		x=x-1
                ^