welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {

for (y<-0 to getMondeHauteur()-1)
{
	avance();
}

	
}

def avance() {
	var c:Int=0
	

	for (i<-0 to getMondeHauteur()-1)
	{
		setPos(x,y)
		c=c+1
		x=x+1
	}
	
}



def reculer() {

	for (i<-0 to getMondeHauteur()-1)
	{
		setPos(x,y)
		c=c+1
		x=x-1
	}
	
}